change name variable and add function for add to cart alert

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     <br><br>
 
     <!-- home brands -->
-    <section id="logo_marcas">
-        <div class="imgsMarcas">
+    <section id="logo_brands">
+        <div class="imgsBrand">
             <img src="assets/images/nike.png" alt="nike">
             <img src="assets/images/puma.png" alt="puma">
             <img src="assets/images/adidas.jpg" alt="adidas">
@@ -1154,13 +1154,13 @@
     <!-- About Section -->
     <section class="about" id="about">
         <div class="about-container-maps">
-            <div class="mapa">
+            <div class="map">
                 <iframe
                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.9219392457626!2d106.8186635757977!3d-6.273994561418697!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f303c158a91f%3A0xa35114a662ed22a8!2sCakrawala%20University!5e0!3m2!1sid!2sid!4v1746197880924!5m2!1sid!2sid"
                     width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
                     referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-            <div class="descricao">
+            <div class="description">
                 <h2>ABOUT</h2>
                 <p>At <strong>UrbanSole.id</strong>, we are passionate about footwear! Our mission is to offer the best
                     casual and sports sneakers, combining comfort, style, and technology so you can stand out on any
