Change structure project

--- a/pages/cart/cart.html
+++ b/pages/cart/cart.html
@@ -9,7 +9,7 @@
         rel="stylesheet">
     <link rel="icon" href="/assets/images/logo.png" type="image/png">
     <title>Shopping cart</title>
-    <link rel="stylesheet" href="cart.css">
+    <link rel="stylesheet" href="/css/cart.css">
     <style>
         body {
             font-family: Arial, sans-serif;
