--- a/pages/contact/contact.html
+++ b/pages/contact/contact.html
@@ -9,7 +9,7 @@
     rel="stylesheet">
     <link rel="icon" href="/assets/images/logo.png" type="image/png">
     <title>Contact Us</title>
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="/css/contact.css">
     <style>
         button {
             width: 100%;
