--- a/pages/finalizepurchase/finalizepurchase.html
+++ b/pages/finalizepurchase/finalizepurchase.html
@@ -9,7 +9,7 @@
         rel="stylesheet">
     <link rel="icon" href="/assets/images/logo.png" type="image/png">
     <title>Payment</title>
-    <link rel="stylesheet" href="finalizepurchase.css">
+    <link rel="stylesheet" href="/css/finalizepurchase.css">
     <style>
         body {
             font-family: Arial, sans-serif;
