--- a/pages/login/login.html
+++ b/pages/login/login.html
@@ -5,50 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/assets/images/logo.png" type="image/png">
+    <link rel="stylesheet" href="/css/login.css">
     <title>Login</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            height: 100vh;
-            background: linear-gradient(135deg, #000000, #ffffff);
-            margin: 0;
-            position: relative;
-        }
-
-        .back-arrow {
-            position: absolute;
-            top: 20px;
-            left: 20px;
-            font-size: 24px;
-            color: white;
-            text-decoration: none;
-        }
-
-        .card {
-            background: white;
-            padding: 20px;
-            border-radius: 10px;
-            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            width: 320px;
-        }
-
-        .card h2 {
-            margin-bottom: 20px;
-            color: #333;
-        }
-
-        input {
-            width: 90%;
-            padding: 10px;
-            margin: 10px 0;
-            border: 1px solid #ddd;
-            border-radius: 5px;
-        }
-
         button {
             width: 100%;
             padding: 10px;
