--- a/pages/outlet/outlet.html
+++ b/pages/outlet/outlet.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
     <link rel="icon" href="/assets/images/logo.png" type="image/png">
     <title>UrbanSole.id</title>
-    <link rel="stylesheet" href="outlet.css">
+    <link rel="stylesheet" href="/css/outlet.css">
 </head>
 
 <body data-scroll-container>
@@ -249,7 +249,7 @@
         <!-- Footer -->
         <div id="footer-container"></div>
 
-        <script src="outlet.js"></script>
+        <script src="/js/outlet.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
             integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
             crossorigin="anonymous"></script>
