--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         rel="stylesheet">
     <link rel="icon" href="/assets/images/logo.png" type="image/png">
     <title>UrbanSole.id</title>
-    <link rel="stylesheet" href="/styles/style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
@@ -1175,7 +1175,7 @@
     <!-- Footer -->
     <div id="footer-container"></div>
 
-    <script src="scripts/script.js"></script>
+    <script src="js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery@3.5.1/dist/jquery.slim.min.js"
         integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
         crossorigin="anonymous"></script>
